--- a/style.css
+++ b/style.css
@@ -240,6 +240,26 @@ h1#textfirst, a {
 
     /* text-indent: 100px; */
 
-    letter-spacing: 10px;
+    /* letter-spacing: 10px; */
+
+
 
 }
+
+
+h1#fontstyle {
+    color: blue;
+    /* font-family: Arial, Helvetica, sans-serif; */
+    font-family: "Lucida Console", "Courier New", monospace;
+    
+    font-style: italic;
+    font-weight: normal;
+
+    font-size: 50px;
+    font-size: 5em; /*16 px = 1em */
+
+
+}
+
+
+/* icons */
